--- a/public/pages/new-coa.html
+++ b/public/pages/new-coa.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>New Chart of Account</title>
     <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/home.css">
+    <link rel="stylesheet" href="public/style/new-coa.css">
 </head>
 <body>
-    <h1>Home</h1>
+    <h1>New Chart of Account</h1>
 </body>
 </html>
