add error pages and etc

--- a/public/pages/edit-coa.html
+++ b/public/pages/edit-coa.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="public/style/edit-coa.css">
 </head>
 <body>
-    <h1>Edit Chart of Account</h1>
+    <div class="center"><h1>Edit Chart of Account</h1></div>
 </body>
 </html>
