--- a/public/pages/error.html
+++ b/public/pages/error.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Transaction</title>
+    <title>Error</title>
     <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/edit-transaction.css">
+    <link rel="stylesheet" href="public/style/error.css">
 </head>
 <body>
-    <div class="center"><h1>Edit Transaction</h1></div>
+    <div class="center">Error</div>
 </body>
 </html>
