--- a/public/pages/full-report.html
+++ b/public/pages/full-report.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Journal</title>
+    <title>Full Report</title>
     <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/full-journal.css">
+    <link rel="stylesheet" href="public/style/full-report.css">
 </head>
 <body>
-    <h1>Full Journal</h1>
+    <div class="center"><h1>Full Report</h1></div>
 </body>
 </html>
