--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="public/style/home.css">
 </head>
 <body>
-    <h1>Home</h1>
+    <div class="center"><h1>Home</h1></div>
 </body>
 </html>
