--- a/public/pages/manage-user.html
+++ b/public/pages/manage-user.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="public/style/manage-user.css">
 </head>
 <body>
-    <h1>Manage User</h1>
+    <div class="center"><h1>Manage User</h1></div>
 </body>
 </html>
