--- a/public/pages/new-coa.html
+++ b/public/pages/new-coa.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="public/style/new-coa.css">
 </head>
 <body>
-    <h1>New Chart of Account</h1>
+    <div class="center"><h1>New Chart of Account</h1></div>
 </body>
 </html>
