--- a/public/pages/summary.html
+++ b/public/pages/summary.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="public/style/summary.css">
 </head>
 <body>
-    <h1>Summary</h1>
+    <div class="center"><h1>Summary</h1></div>
 </body>
 </html>
