add basic auth without db

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
+    <title>Login</title>
     <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/error.css">
+    <link rel="stylesheet" href="public/style/login.css">
 </head>
 <body>
-    <div class="center"><h1>Error</h1></div>
-    <div class="center">
-        <div class="err">
-            <h2>{{.}}</h2>
-        </div>
-    </div>
+    <div class="center"><h1>Login</h1></div>
 </body>
 </html>
