--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -7,8 +7,16 @@
     <title>Login</title>
     <link rel="stylesheet" href="public/style/basic.css">
     <link rel="stylesheet" href="public/style/login.css">
+    <script src="public/javascript/login.js" defer></script> 
 </head>
 <body>
     <div class="center"><h1>Login</h1></div>
+    <div class="center" id="login">
+        <form name="loginForm" method="POST" action="/login">
+            <input type="text" placeholder="Username" name="Username" required>
+            <input type="password" placeholder="Pass" name="Pass" required>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
