add memrequest, loanreq, dll

--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -12,6 +12,7 @@
     <div class="center"><h1>Admin</h1></div>
     <div class="center">
         <div>
+            <a href="/mem-request"><div class="menu-btn"><img src="public/assets/request.svg" alt="member request">member request</div></a>
             <a href="/manage-user"><div class="menu-btn"><img src="public/assets/manage-user.svg" alt="manage user">manage user</div></a>
             <a href="/summary"><div class="menu-btn"><img src="public/assets/report.svg" alt="summary">summary</div></a>
             <a href="/full-report"><div class="menu-btn"><img src="public/assets/report.svg" alt="full report">full report</div></a>
