--- a/public/pages/edit-coa.html
+++ b/public/pages/edit-coa.html
@@ -10,5 +10,23 @@
 </head>
 <body>
     <div class="center"><h1>Edit Chart of Account</h1></div>
+    <div class="center">
+        <table>
+            <thead>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Info</th>
+                <th>Command</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Cash</td>
+                    <td>Uang kas, bertambah debit berkurang kredit.Uang kas, bertambah debit berkurang kredit.</td>
+                    <td><button>Edit</button><button>Remove</button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
