--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -7,11 +7,10 @@
     <title>Login</title>
     <link rel="stylesheet" href="public/style/basic.css">
     <link rel="stylesheet" href="public/style/login.css">
-    <script src="public/javascript/login.js" defer></script> 
 </head>
 <body>
     <div class="center"><h1>Login</h1></div>
-    <div class="center" id="login">
+    <div class="center marginTop">
         <form name="loginForm" method="POST" action="/login">
             <input type="text" placeholder="Username" name="Username" required>
             <input type="password" placeholder="Pass" name="Pass" required>
