--- a/public/pages/summary.html
+++ b/public/pages/summary.html
@@ -10,5 +10,37 @@
 </head>
 <body>
     <div class="center"><h1>Summary</h1></div>
+    <div class="center"><h2>Until 4 Aug 21 09:04:49</h2></div>
+    <div class="center">
+        <table>
+            <caption><h2>Ledger Sum</h2></caption>
+            <thead>
+                <th>Code</th>
+                <th>Account</th>
+                <th>Type</th>
+                <th>Debit (Rp)</th>
+                <th>Credit (Rp)</th>
+                <th>Diff (Rp)</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>A1</td>
+                    <td>Cash</td>
+                    <td>Assets</td>
+                    <td>600000000</td>
+                    <td>250000000</td>
+                    <th>350000000</th>
+                </tr>
+                <tr>
+                    <td>A2</td>
+                    <td>Debt</td>
+                    <td>Liabilities</td>
+                    <td>100000000</td>
+                    <td>450000000</td>
+                    <th>350000000</th>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
