--- a/public/pages/edit-transaction.html
+++ b/public/pages/edit-transaction.html
@@ -10,5 +10,24 @@
 </head>
 <body>
     <div class="center"><h1>Edit Transaction</h1></div>
+    <div class="center">
+        <table>
+            <caption><h2>Recent Transaction</h2></caption>
+            <thead>
+                <th>Date</th>
+                <th>Name</th>
+                <th>Debit (Rp)</th>
+                <th>Credit (Rp)</th>
+                <th>Info</th>
+            </thead>
+            <tbody>
+                <td>4 Aug 21</td>
+                <td>Cash</td>
+                <td>0</td>
+                <td>250000</td>
+                <td>Mengambil Uang</td>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
