--- a/public/pages/mem-request.html
+++ b/public/pages/mem-request.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Member Request</title>
     <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/home.css">
+    <link rel="stylesheet" href="public/style/mem-request.css">
 </head>
 <body>
-    <div class="center"><h1>Home</h1></div>
+    <div class="center"><h1>Member Request</h1></div>
 </body>
 </html>
