--- a/public/pages/edit-coa.html
+++ b/public/pages/edit-coa.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Chart of Account</title>
-    <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/edit-coa.css">
+    <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
-    <div class="center"><h1>Edit Chart of Account</h1></div>
-    <div class="center">
+    <article>
+        <header><h1>Edit Chart of Accounts</h1></header>
         <table>
             <thead>
                 <th>ID</th>
@@ -27,6 +26,6 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </article>
 </body>
 </html>
