--- a/public/pages/edit-transaction.html
+++ b/public/pages/edit-transaction.html
@@ -5,29 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Transaction</title>
-    <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/edit-transaction.css">
+    <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
-    <div class="center"><h1>Edit Transaction</h1></div>
-    <div class="center">
+    <article>
+        <header><h1>Edit Transaction</h1></header>
         <table>
-            <caption><h2>Recent Transaction</h2></caption>
+            <caption><h2>Recent Transactions</h2></caption>
             <thead>
+                <th>ID</th>
                 <th>Date</th>
                 <th>Name</th>
                 <th>Debit (Rp)</th>
                 <th>Credit (Rp)</th>
                 <th>Info</th>
+                <th>Command</th>
             </thead>
             <tbody>
+                <td>1</td>
                 <td>4 Aug 21</td>
                 <td>Cash</td>
                 <td>0</td>
                 <td>250000</td>
                 <td>Mengambil Uang</td>
+                <td><button>Remove</button></td>
             </tbody>
         </table>
-    </div>
+    </article>
 </body>
 </html>
