--- a/public/pages/mem-inspect.html
+++ b/public/pages/mem-inspect.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Member Request</title>
+    <title>Member Inspect</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
     <article>
-        <header><h1>Member Request</h1></header>
+        <header><h1>Member Inspect</h1></header>
     </article>
 </body>
 </html>
