--- a/public/pages/summary.html
+++ b/public/pages/summary.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summary</title>
-    <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/summary.css">
+    <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
-    <div class="center"><h1>Summary</h1></div>
-    <div class="center"><h2>Until 4 Aug 21 09:04:49</h2></div>
-    <div class="center">
+    <article>
+        <header><h1>Summary</h1></header>
         <table>
             <caption><h2>Ledger Sum</h2></caption>
             <thead>
@@ -41,6 +39,6 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </article>
 </body>
 </html>
