--- a/public/pages/error.html
+++ b/public/pages/error.html
@@ -5,15 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
-    <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/error.css">
+    <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
-    <div class="center"><h1>Error</h1></div>
-    <div class="center">
-        <div class="err">
-            <h2>{{.}}</h2>
-        </div>
+    <div class="container">
+        <h1>Error</h1>
+        <h2>{{ . }}</h2>
     </div>
 </body>
 </html>
