--- a/public/pages/loan-req.html
+++ b/public/pages/loan-req.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loan Request</title>
-    <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/loan-req.css">
+    <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
-    <div class="center"><h1>Loan Request</h1></div>
+    <article>
+        <header><h1>Loan Request</h1></header>
+    </article>
 </body>
 </html>
