--- a/public/pages/manage-user.html
+++ b/public/pages/manage-user.html
@@ -5,45 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage User</title>
-    <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/manage-user.css">
+    <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
-    <div class="center"><h1>Manage User</h1></div>
-    <div class="center">
-        <div class="manageuser">
-            <h2>Find User</h2>
-            <form action="/manage-user" method="POST" name="findForm">
-                <select name="filter" >
-                    <option value="Username">Username</option>
-                    <option value="FullName">FullName</option>
-                </select>
-                <input type="text" name="Key" placeholder="search key">
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </div>
-    <div class="center">
-        <div class="manageuser">
-            <h2>Edit User Role</h2>
-            <form action="/manage-user" method="POST" name="editRoleForm">
-                <input type="text" name="id" placeholder="ID">
-                <select name="role">
-                    <option value="Admin-Input">Admin-Input</option>
-                    <option value="Member">Member</option>
-                </select>
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </div>
-    <div class="center">
-        <div class="manageuser">
-            <h2>Delete User</h2>
-            <form action="/manage-user" method="POST" name="editRoleForm">
-                <input type="text" name="id" placeholder="ID">
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </div>
+    <article>
+        <header><h1>Manage User</h1></header>
+        <p>Find User</p>
+        <form action="/manage-user" method="POST" name="findForm">
+            <select name="filter" >
+                <option value="Username">Username</option>
+                <option value="FullName">FullName</option>
+            </select>
+            <input type="text" name="Key" placeholder="search key">
+            <button type="submit">Submit</button>
+        </form>
+        <hr>
+        <p>Edit User Role</p>
+        <form action="/manage-user" method="POST" name="editRoleForm">
+            <input type="text" name="id" placeholder="ID">
+            <select name="role">
+                <option value="Admin-Input">Admin-Input</option>
+                <option value="Member">Member</option>
+            </select>
+            <button type="submit">Submit</button>
+        </form>
+        <hr>
+        <p>Delete User</p>
+        <form action="/manage-user" method="POST" name="editRoleForm">
+            <input type="text" name="id" placeholder="ID">
+            <button type="submit">Submit</button>
+        </form>
+    </article>
 </body>
 </html>
