--- a/public/pages/success.html
+++ b/public/pages/success.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success</title>
-    <link rel="stylesheet" href="public/style/basic.css">
-    <link rel="stylesheet" href="public/style/success.css">
+    <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
-    <div class="center"><h1>Success</h1></div>
-    {{.}}
+    <div class="container">
+        <h1>Success</h1>
+        <h2>{{ . }}</h2>
+    </div>
 </body>
 </html>
