migrate using pico css. add 7 mocks

--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -37,7 +37,7 @@
             <p>Manage User</p>
             <button><a href="/manage-user">Manage User</a></button>
             <button><a href="/mem-inspect">Inspect Member</a></button>
-            <button><a href="/mem-request">Request List</a></button>
+            <button><a href="/mem-request">Member Request</a></button>
         </article>
     </div>
 </body>
