--- a/public/pages/deposit-req.html
+++ b/public/pages/deposit-req.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Member Inspect</title>
+    <title>Deposit Request</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
     <article>
-        <header><h1>Member Inspect</h1></header>
-        <form action="/mem-inspect" method="GET">
-            <input type="text" name="ID" placeholder="ID" required>
+        <header><h1>Deposit Request</h1></header>
+        <form action="/deposit-req" method="POST">
+            <input type="text" name="Amount" placeholder="Amount (Rp)" required>
             <button type="submit">Submit</button>
         </form>
     </article>
