--- a/public/pages/manage-user.html
+++ b/public/pages/manage-user.html
@@ -11,19 +11,19 @@
     <article>
         <header><h1>Manage User</h1></header>
         <p>Find User</p>
-        <form action="/manage-user" method="POST" name="findForm">
-            <select name="filter" >
+        <form action="/find-user" method="GET" name="findForm">
+            <select name="Filter" required>
                 <option value="Username">Username</option>
                 <option value="FullName">FullName</option>
             </select>
-            <input type="text" name="Key" placeholder="search key">
-            <button type="submit">Submit</button>
+            <input type="text" name="Key" placeholder="search key" required>
+            <button type="submit">Search</button>
         </form>
         <hr>
         <p>Edit User Role</p>
         <form action="/manage-user" method="POST" name="editRoleForm">
-            <input type="text" name="id" placeholder="ID">
-            <select name="role">
+            <input type="text" name="ID" placeholder="ID" required>
+            <select name="Role" required>
                 <option value="Admin-Input">Admin-Input</option>
                 <option value="Member">Member</option>
             </select>
@@ -32,7 +32,7 @@
         <hr>
         <p>Delete User</p>
         <form action="/manage-user" method="POST" name="editRoleForm">
-            <input type="text" name="id" placeholder="ID">
+            <input type="text" name="ID" placeholder="ID" required>
             <button type="submit">Submit</button>
         </form>
     </article>
