--- a/public/pages/new-coa.html
+++ b/public/pages/new-coa.html
@@ -13,6 +13,7 @@
         <header><h1>New Chart of Accounts</h1></header>
         <form name="newCOAForm" method="POST" action="/new-coa">
             <input type="text" placeholder="Account Name" name="Name" required>
+            <input type="text" placeholder="Code" name="Code" required>
             <select name="Statement" id="statement" required>
                 <option value="Balance Sheet" selected>Balance Sheet</option>
                 <option value="Income Statement">Income Statement</option>
