--- a/public/pages/user-setting.html
+++ b/public/pages/user-setting.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loan Request</title>
+    <title>Setting</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
 </head>
 <body>
-    <article>
-        <header><h1>Loan Request</h1></header>
-    </article>
+    
 </body>
 </html>
