--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -35,9 +35,10 @@
             <button><a href="/edit-coa">Edit Account</a></button>
             <hr>
             <p>Manage User</p>
-            <button><a href="/manage-user">Manage User</a></button>
-            <button><a href="/mem-inspect">Inspect Member</a></button>
-            <button><a href="/mem-request">Member Request</a></button>
+            <button><a href="/manage-user">Manage</a></button>
+            <button><a href="/mem-inspect">Inspect</a></button>
+            <button><a href="/mem-request">Request List</a></button>
+            <button><a href="/register">Register</a></button>
         </article>
     </div>
 </body>
