--- a/public/pages/deposit-req.html
+++ b/public/pages/deposit-req.html
@@ -12,6 +12,11 @@
         <header><h1>Deposit Request</h1></header>
         <form action="/deposit-req" method="POST">
             <input type="text" name="Amount" placeholder="Amount (Rp)" required>
+            <select name="Type">
+                <option value="SS">Sumbangan Sukarela</option>
+                <option value="IW">Iuran Wajib</option>
+                <option value="SS">Pokok</option>
+            </select>
             <button type="submit">Submit</button>
         </form>
     </article>
