--- a/public/pages/member.html
+++ b/public/pages/member.html
@@ -32,6 +32,7 @@
         <button><a href="/deposit-req">Request Deposit</a></button>
         <button><a href="/withdraw-req">Request Withdraw</a></button>
         <button><a href="/loan-req">Create Loan Request</a></button>
+        <button><a href="/pay-loan">Pay Loan</a></button>
         <button><a href="/user-setting">Setting</a></button>
         <hr>
         <p>Summary</p>
